[gd_scene load_steps=18 format=3 uid="uid://ofuldt86mkci"]

[ext_resource type="Theme" uid="uid://eg00aabwon5u" path="res://assets/themes/heme_global.tres" id="1_qdg42"]
[ext_resource type="Script" uid="uid://bwn3gcbnnboko" path="res://scripts/combat_2.gd" id="2_yncii"]
[ext_resource type="Texture2D" uid="uid://dperr4yp7pep4" path="res://assets/f1.png" id="3_mpml0"]
[ext_resource type="Texture2D" uid="uid://byl0u3qjhnb4p" path="res://assets/Fondo de Fondo de ChatGPT Image 24 may 2025, 01_42_21 p.m. eliminado eliminado.png" id="4_3fibl"]
[ext_resource type="Texture2D" uid="uid://ddfwu88k4supu" path="res://assets/Copia de dbd0c9c2-f88a-4b73-b282-16ac307aa52a.png" id="5_jltyx"]
[ext_resource type="Texture2D" uid="uid://div4d6cqg0ln" path="res://assets/portada2.png" id="6_oyg6b"]
[ext_resource type="Texture2D" uid="uid://cvd4avrai3qrf" path="res://assets/portada.png" id="7_2nh0e"]
[ext_resource type="Texture2D" uid="uid://uioxl6ybr2td" path="res://assets/boton.png" id="8_kl8vi"]
[ext_resource type="Texture2D" uid="uid://deltycl0djru6" path="res://assets/b1.png" id="9_no0sr"]
[ext_resource type="Texture2D" uid="uid://cplklhjp3lhst" path="res://assets/Fondo de f6f343a8-f379-4c16-bf8f-979221e71431 eliminado.png" id="10_nm8eh"]
[ext_resource type="Texture2D" uid="uid://5bueb1miaw2h" path="res://assets/Fondo de 1d81a819-1412-41e0-8b5f-70eb3c01c53d eliminado.png" id="11_aur7d"]
[ext_resource type="Texture2D" uid="uid://pa5d0v84q0f5" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.22 p.m. eliminado.png" id="12_r3d84"]
[ext_resource type="Texture2D" uid="uid://w5e45pwmwd45" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.41 p.m. eliminado.png" id="13_xykj1"]
[ext_resource type="Texture2D" uid="uid://dup3d1csac1p7" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.33.09 p.m. eliminado.png" id="14_kenfu"]
[ext_resource type="Texture2D" uid="uid://cmeaejkva4clb" path="res://assets/Fondo de Captura de pantalla 2025-06-04 a la(s) 2.22.33 p.m. eliminado.png" id="15_0prxh"]
[ext_resource type="Texture2D" uid="uid://bhfdyr65v3nbd" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.54 p.m. eliminado.png" id="16_nlkmw"]
[ext_resource type="Texture2D" uid="uid://t0uxtsxvj5vm" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.33.00 p.m. eliminado.png" id="17_codlp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_qdg42")
script = ExtResource("2_yncii")

[node name="FondoCombate" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = -15.0
offset_right = 1274.0
offset_bottom = 745.0
texture = ExtResource("3_mpml0")
expand_mode = 1
flip_h = true
flip_v = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoJugador" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 38.0
offset_right = 373.0
offset_bottom = 251.0
theme = ExtResource("1_qdg42")

[node name="AvatarJugador" type="TextureRect" parent="UI/InfoJugador"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_top = -7.0
offset_right = 315.0
offset_bottom = 196.0
texture = ExtResource("4_3fibl")
expand_mode = 1

[node name="Overlay" type="Control" parent="UI/InfoJugador"]
anchors_preset = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 288.0
offset_bottom = 169.0

[node name="VidaIcono" type="TextureRect" parent="UI/InfoJugador/Overlay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.179
anchor_bottom = 0.159
offset_left = 93.0
offset_top = 42.0
offset_right = 115.083
offset_bottom = 57.535

[node name="saludj" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 117.0
offset_top = 23.0
offset_right = 272.0
offset_bottom = 106.0
text = "\"salud\""

[node name="fichas" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 116.0
offset_top = 48.0
offset_right = 271.0
offset_bottom = 131.0
text = "\"fichas\""

[node name="VidaLabel" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 2
offset_left = 223.0
offset_top = 22.0
offset_right = 509.0
offset_bottom = 45.0
text = "10"

[node name="FichasIcono" type="TextureRect" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 104.0
offset_top = 79.0
offset_right = 144.0
offset_bottom = 119.0

[node name="FichasLabel" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 2
offset_left = 234.0
offset_top = 50.0
offset_right = 549.0
offset_bottom = 73.0
text = "0"

[node name="InfoEnemigo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 868.0
offset_top = 38.0
offset_right = 1210.0
offset_bottom = 275.0
theme = ExtResource("1_qdg42")

[node name="AvatarEnemigo" type="TextureRect" parent="UI/InfoEnemigo"]
layout_mode = 0
offset_left = 17.0
offset_top = -11.0
offset_right = 323.0
offset_bottom = 193.0
texture = ExtResource("5_jltyx")
expand_mode = 1
flip_h = true

[node name="Overlay" type="Control" parent="UI/InfoEnemigo"]
anchors_preset = 0
offset_left = 39.0
offset_top = 14.0
offset_right = 313.0
offset_bottom = 164.0

[node name="VidaIcono" type="TextureRect" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 61.0
offset_top = 84.0
offset_right = 101.0
offset_bottom = 121.0

[node name="VidaLabel" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 117.0
offset_top = 24.0
offset_right = 475.0
offset_bottom = 52.0
text = "30\""

[node name="FichasLabel" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 23.0
offset_top = 51.0
offset_right = 167.0
offset_bottom = 81.0
text = "fichas 100
"

[node name="FichasIcono" type="TextureRect" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 100.0
offset_top = 95.0
offset_right = 140.0
offset_bottom = 135.0

[node name="salud" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 2.0
offset_top = 26.0
offset_right = 362.0
offset_bottom = 239.0
text = "\"salud\""

[node name="ZonaEnemigo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 799.0
offset_top = 302.0
offset_right = 1209.3
offset_bottom = 682.0

[node name="MazoTapa" type="TextureRect" parent="UI/ZonaEnemigo"]
layout_mode = 2
offset_left = 219.0
offset_top = 179.0
offset_right = 369.0
offset_bottom = 383.0
texture = ExtResource("6_oyg6b")
expand_mode = 1

[node name="CartasEnemigo" type="HBoxContainer" parent="UI/ZonaEnemigo"]
layout_mode = 2
offset_left = 3.0
offset_top = 47.0
offset_right = 403.0
offset_bottom = 187.0
alignment = 2

[node name="ZonaJugador" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 55.0
offset_top = 297.0
offset_right = 465.0
offset_bottom = 677.0

[node name="CartasJugador" type="HBoxContainer" parent="UI/ZonaJugador"]
layout_mode = 2
offset_left = 8.0
offset_top = 47.0
offset_right = 408.0
offset_bottom = 187.0

[node name="MazoTapa" type="TextureRect" parent="UI/ZonaJugador"]
layout_mode = 2
offset_left = 30.0
offset_top = 188.0
offset_right = 172.0
offset_bottom = 381.0
texture = ExtResource("7_2nh0e")
expand_mode = 1

[node name="BotonesJuego" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 495.0
offset_top = 311.0
offset_right = 838.0
offset_bottom = 668.0
theme = ExtResource("1_qdg42")

[node name="BotonPedir" type="Button" parent="UI/BotonesJuego"]
layout_mode = 2
offset_left = 27.0
offset_top = 6.0
offset_right = 1571.0
offset_bottom = 1038.0
scale = Vector2(0.12, 0.12)
icon = ExtResource("8_kl8vi")

[node name="BotonPlantarse" type="Button" parent="UI/BotonesJuego"]
layout_mode = 2
offset_left = 20.0
offset_top = 165.0
offset_right = 1564.0
offset_bottom = 1197.0
scale = Vector2(0.13, 0.13)
icon = ExtResource("9_no0sr")

[node name="MensajeCentral" type="Label" parent="UI"]
offset_left = 417.0
offset_top = 200.0
offset_right = 825.0
offset_bottom = 312.0
theme = ExtResource("1_qdg42")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonEscudo" type="Button" parent="UI"]
offset_left = 238.0
offset_top = 211.0
offset_right = 422.0
offset_bottom = 340.0
icon = ExtResource("10_nm8eh")
expand_icon = true

[node name="BotonDanoX2" type="Button" parent="UI"]
offset_left = 59.0
offset_top = 214.0
offset_right = 230.0
offset_bottom = 340.0
icon = ExtResource("11_aur7d")
expand_icon = true

[node name="fichasjgd" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 343.0
offset_top = 146.0
offset_right = 467.0
offset_bottom = 255.0
texture = ExtResource("12_r3d84")

[node name="fichasjgd2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 52.0
offset_right = 461.0
offset_bottom = 191.0
texture = ExtResource("13_xykj1")

[node name="fichasjgd3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 131.0
offset_right = 831.0
offset_bottom = 240.0
texture = ExtResource("14_kenfu")

[node name="fichasjgd4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 796.0
offset_top = 52.0
offset_right = 920.0
offset_bottom = 161.0
texture = ExtResource("15_0prxh")

[node name="fichasenemi" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 777.0
offset_top = 154.0
offset_right = 914.0
offset_bottom = 257.0
texture = ExtResource("14_kenfu")

[node name="fichasenemi2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 692.0
offset_top = 52.0
offset_right = 824.0
offset_bottom = 160.0
texture = ExtResource("14_kenfu")

[node name="fichasenemi4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 136.0
offset_right = 550.0
offset_bottom = 242.0
texture = ExtResource("16_nlkmw")

[node name="fichasenemi3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 34.0
offset_right = 530.0
offset_bottom = 168.0
texture = ExtResource("17_codlp")

[node name="saludj2" type="Label" parent="."]
layout_mode = 0
offset_right = 69.0
offset_bottom = 35.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 635.0
offset_right = 993.0
offset_bottom = 661.0
text = "el enemigo se planta con 17  le gusta tomar riesgos "
